objects/Agrupamento_Fiscal_Year__c.object
<CustomObject>
    <description>Onda 02 - Objeto utilizado para solução de agrupamento por FY</description>
    <fields>
        <fullName>Ano_Fiscal__c</fullName>
        <label>Ano Fiscal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ano_fiscal_calculadoag__c</fullName>
        <label>Ano fiscal (calculado)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CasoEspecial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CasoEspecial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAT_Contract</label>
        <referenceTo>LAT_Contract__c</referenceTo>
        <relationshipLabel>Agrupamento Fiscal Year</relationshipLabel>
        <relationshipName>Agrupamento_Fiscal_Year</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MensagemIntegracao__c</fullName>
        <label>Mensagem Integração</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Numero_da_D_A__c</fullName>
        <label>Número da D.A</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_da_RV_criada__c</fullName>
        <label>Número da RV criada</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sistema__c</fullName>
        <label>Sistema</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_da_Integra_o__c</fullName>
        <label>Status da Integração</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aguardando Resposta</fullName>
                </value>
                <value>
                    <fullName>Reservado</fullName>
                </value>
                <value>
                    <fullName>Erro de integração</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Verba__c</fullName>
        <label>Tipo de Verba</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allowance</fullName>
                </value>
                <value>
                    <fullName>Bonificação</fullName>
                </value>
                <value>
                    <fullName>KA Contratos</fullName>
                </value>
                <value>
                    <fullName>Off Trade - A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Direto</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Eventos</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Indireto</fullName>
                </value>
                <value>
                    <fullName>Off Trade - KA</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Tático</fullName>
                </value>
                <value>
                    <fullName>On Trade - Ativação &amp; Materiais POS</fullName>
                </value>
                <value>
                    <fullName>On Trade - Contratos</fullName>
                </value>
                <value>
                    <fullName>On Trade - Eventos Nacionais</fullName>
                </value>
                <value>
                    <fullName>KA - Verba preço promocionado</fullName>
                </value>
                <value>
                    <fullName>On trade - Verba venda direta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Workflow__c</fullName>
        <label>Tipo de WF</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verba_Adiantada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verba Adiantada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verba_Adicional_VAD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verba Adicional (VAD)</label>
        <referenceTo>Verba_Adicional_VAD__c</referenceTo>
        <relationshipLabel>Agrupamento Fiscal Year</relationshipLabel>
        <relationshipName>Agrupamento_Fiscal_Year</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verba_Extra__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verba Extra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verba_Normal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verba Normal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verba_Reservada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verba Reservada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volume_Total__c</fullName>
        <label>Volume Total (CA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>valor_total__c</fullName>
        <label>Valor Total (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Agrupamento Fiscal Year</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Agrupamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agrupamento Fiscal Year</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>